Fixed the vertical overflow in card

--- a/sass/pages/_suggested-products.scss
+++ b/sass/pages/_suggested-products.scss
@@ -3,6 +3,7 @@
   overflow: hidden;
 
   .products {
+    min-height: 30rem;
     display: flex;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
